# crobot

./: README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/levels/: world1_stage1.area.json  world1_stage1.json
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  smb_format_decoder.cpp  smb_format_decoder.h
app/src/main/java/com/crobot/game/: GameActivity.java  GameView.java
app/src/main/java/com/crobot/game/enemy/: AnimatedEnemy.java  EnemyAnimations.java
app/src/main/java/com/crobot/game/level/: LegacyWorldData.java  LevelCatalog.java  LevelDescriptor.java  LevelModel.java  LevelRepository.java
app/src/main/java/com/example/robotparkour/: MainActivity.java
app/src/main/res/drawable/: bg_control_button_default.xml  bg_control_button_pressed.xml  bg_control_button_selector.xml  bg_final_boss_button_active.xml  bg_final_boss_button_default.xml  bg_final_boss_button_pressed.xml  bg_final_boss_button_selector.xml  bg_level_button_active.xml  bg_level_button_default.xml  bg_level_button_pressed.xml  bg_level_button_selector.xml  bg_pager_dot_selector.xml  bg_world_select_panel.xml  ic_check.xml  ic_duck.xml  ic_jump.xml  ic_labyrinth.xml  ic_run_left.xml  ic_run_right.xml
app/src/main/res/layout/: activity_main.xml  activity_platformer.xml  item_level_button.xml  item_level_page.xml  view_pager_dot.xml  view_world_select_pager.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+34 files in other folders)
